--- a/css/style.css
+++ b/css/style.css
@@ -67,14 +67,13 @@ input, textarea {
 }
 
 body {
-  background-image: url("/img/1.png");
+  background-color: #17a2b8;
   margin: 0;
   font-family: var(--bs-font-sans-serif);
   font-size: 1rem;
   font-weight: 700;
   line-height: 1.5;
   color: #212529;
-  background-color: #fff;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
