--- a/css/style.css
+++ b/css/style.css
@@ -1023,7 +1023,7 @@ textarea.form-control {
           box-sizing: content-box;
   width: 1em;
   height: 1em;
-  padding: 0.25em 0.25em;
+  padding: 0.25em;
   color: inherit;
   background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='inherit'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
   border: 0;
@@ -1102,14 +1102,14 @@ textarea.form-control {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 1rem 1rem;
+  padding: 1rem;
   border-bottom: 2px solid #333;
   border-top-left-radius: 33px;
   border-top-right-radius: 33px;
 }
 
 .modal-header .btn-close {
-  padding: 0.5rem 0.5rem;
+  padding: 0.5rem;
   margin: -0.5rem -0.5rem -0.5rem auto;
 }
 
@@ -1559,4 +1559,3 @@ footer p {
   margin-top: 5px;
   margin-bottom: 5px;
 }
-/*# sourceMappingURL=custom.css.map */
