--- a/css/style.css
+++ b/css/style.css
@@ -1539,3 +1539,9 @@ footer p {
   margin-top: 5px;
   margin-bottom: 5px;
 }
+
+.card:hover{
+  transform: scale(1.05);
+  transition: all 1s ease;
+  z-index: 999;
+}
